# rofi-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  pango.rs
