[package]
name = "rofi"
version = "0.2.0"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
edition = "2018"
license = "Apache-2.0"
description = "Library to crate rofi windows and parse the output"
keywords = ["rofi", "gui"]
categories = ["gui"]
homepage = "https://github.com/tiborschneider/rofi-rs"
repository = "https://github.com/tiborschneider/rofi-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"